src/flutter_recorder.h

FFI_PLUGIN_EXPORT void flutter_recorder_setPauseRecording(bool pause);
FFI_PLUGIN_EXPORT void flutter_recorder_stopRecording();
FFI_PLUGIN_EXPORT void flutter_recorder_getVolumeDb(float *volumeDb);
FFI_PLUGIN_EXPORT void flutter_recorder_getFft(float **fft,
                                               bool *isTheSameAsBefore);
FFI_PLUGIN_EXPORT void flutter_recorder_getWave(float **wave,
                                                bool *isTheSameAsBefore);
FFI_PLUGIN_EXPORT void flutter_recorder_getTexture(float **samples,
                                                   bool *isTheSameAsBefore);
FFI_PLUGIN_EXPORT void flutter_recorder_getTexture2D(float **samples,
                                                     bool *isTheSameAsBefore);
FFI_PLUGIN_EXPORT float flutter_recorder_getTextureValue(int row, int column);
FFI_PLUGIN_EXPORT void flutter_recorder_setFftSmoothing(float smooth);
// Getters for actual device parameters (populated after init)
FFI_PLUGIN_EXPORT unsigned int flutter_recorder_getSampleRate();
FFI_PLUGIN_EXPORT unsigned int flutter_recorder_getCaptureChannels();
FFI_PLUGIN_EXPORT unsigned int flutter_recorder_getPlaybackChannels();
FFI_PLUGIN_EXPORT int flutter_recorder_getCaptureFormat();
FFI_PLUGIN_EXPORT int flutter_recorder_getPlaybackFormat();
/////////////////////////
/// MONITORING
/////////////////////////
FFI_PLUGIN_EXPORT void flutter_recorder_setMonitoring(bool enabled);
FFI_PLUGIN_EXPORT void flutter_recorder_setMonitoringMode(int mode);
/////////////////////////
/// SLAVE MODE
/////////////////////////
// Check if slave audio is ready (first callback has run successfully)
// Used to wait for the audio pipeline to stabilize before calibration
FFI_PLUGIN_EXPORT int flutter_recorder_isSlaveAudioReady();
/////////////////////////
/// NATIVE AUDIO SINK
/////////////////////////
// Direct native-to-native streaming (bypasses Dart main thread)
// Callback type matches flutter_soloud's expected signature
typedef void (*NativeAudioSinkCallback)(const unsigned char* data,
                                        unsigned int dataLen, void* userData);
// Set native audio sink for direct recorder-to-player streaming
FFI_PLUGIN_EXPORT void flutter_recorder_setNativeAudioSink(
    NativeAudioSinkCallback callback, void* userData);
// Check if native audio sink is active
FFI_PLUGIN_EXPORT bool flutter_recorder_isNativeAudioSinkActive();
// Disable native audio sink
FFI_PLUGIN_EXPORT void flutter_recorder_disableNativeAudioSink();
// Inject preroll audio from ring buffer into SoLoud stream via native path
FFI_PLUGIN_EXPORT void flutter_recorder_injectPreroll(size_t frameCount);
/////////////////////////
/// FILTERS
/////////////////////////
FFI_PLUGIN_EXPORT int
flutter_recorder_isFilterActive(enum RecorderFilterType filterType);
FFI_PLUGIN_EXPORT enum CaptureErrors
flutter_recorder_addFilter(enum RecorderFilterType filterType);
FFI_PLUGIN_EXPORT enum CaptureErrors
flutter_recorder_removeFilter(enum RecorderFilterType filterType);