lib/src/bindings/flutter_recorder_bindings_generated.dart


  void flutter_recorder_setPauseRecording(
    bool pause,
  ) {
    return _flutter_recorder_setPauseRecording(
      pause,
    );
  }

  late final _flutter_recorder_setPauseRecordingPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
          'flutter_recorder_setPauseRecording');
  late final _flutter_recorder_setPauseRecording =
      _flutter_recorder_setPauseRecordingPtr.asFunction<void Function(bool)>();

  void flutter_recorder_stopRecording() {
    return _flutter_recorder_stopRecording();
  }

  late final _flutter_recorder_stopRecordingPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_stopRecording');
  late final _flutter_recorder_stopRecording =
      _flutter_recorder_stopRecordingPtr.asFunction<void Function()>();

  void flutter_recorder_getVolumeDb(
    ffi.Pointer<ffi.Float> volumeDb,
  ) {
    return _flutter_recorder_getVolumeDb(
      volumeDb,
    );
  }

  late final _flutter_recorder_getVolumeDbPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Float>)>>(
          'flutter_recorder_getVolumeDb');
  late final _flutter_recorder_getVolumeDb = _flutter_recorder_getVolumeDbPtr
      .asFunction<void Function(ffi.Pointer<ffi.Float>)>();

  void flutter_recorder_getFft(
    ffi.Pointer<ffi.Pointer<ffi.Float>> fft,
    ffi.Pointer<ffi.Bool> isTheSameAsBefore,
  ) {
    return _flutter_recorder_getFft(
      fft,
      isTheSameAsBefore,
    );
  }

  late final _flutter_recorder_getFftPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Pointer<ffi.Float>>,
              ffi.Pointer<ffi.Bool>)>>('flutter_recorder_getFft');
  late final _flutter_recorder_getFft = _flutter_recorder_getFftPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Pointer<ffi.Float>>, ffi.Pointer<ffi.Bool>)>();

  void flutter_recorder_getWave(
    ffi.Pointer<ffi.Pointer<ffi.Float>> wave,
    ffi.Pointer<ffi.Bool> isTheSameAsBefore,
  ) {
    return _flutter_recorder_getWave(
      wave,
      isTheSameAsBefore,
    );
  }

  late final _flutter_recorder_getWavePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Pointer<ffi.Float>>,
              ffi.Pointer<ffi.Bool>)>>('flutter_recorder_getWave');
  late final _flutter_recorder_getWave =
      _flutter_recorder_getWavePtr.asFunction<
          void Function(
              ffi.Pointer<ffi.Pointer<ffi.Float>>, ffi.Pointer<ffi.Bool>)>();

  void flutter_recorder_getTexture(
    ffi.Pointer<ffi.Pointer<ffi.Float>> samples,
    ffi.Pointer<ffi.Bool> isTheSameAsBefore,
  ) {
    return _flutter_recorder_getTexture(
      samples,
      isTheSameAsBefore,
    );
  }

  late final _flutter_recorder_getTexturePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Pointer<ffi.Float>>,
              ffi.Pointer<ffi.Bool>)>>('flutter_recorder_getTexture');
  late final _flutter_recorder_getTexture =
      _flutter_recorder_getTexturePtr.asFunction<
          void Function(
              ffi.Pointer<ffi.Pointer<ffi.Float>>, ffi.Pointer<ffi.Bool>)>();

  void flutter_recorder_getTexture2D(
    ffi.Pointer<ffi.Pointer<ffi.Float>> samples,
    ffi.Pointer<ffi.Bool> isTheSameAsBefore,
  ) {
    return _flutter_recorder_getTexture2D(
      samples,
      isTheSameAsBefore,
    );
  }

  late final _flutter_recorder_getTexture2DPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Pointer<ffi.Float>>,
              ffi.Pointer<ffi.Bool>)>>('flutter_recorder_getTexture2D');
  late final _flutter_recorder_getTexture2D =
      _flutter_recorder_getTexture2DPtr.asFunction<
          void Function(
              ffi.Pointer<ffi.Pointer<ffi.Float>>, ffi.Pointer<ffi.Bool>)>();

  double flutter_recorder_getTextureValue(
    int row,
    int column,
  ) {
    return _flutter_recorder_getTextureValue(
      row,
      column,
    );
  }

  late final _flutter_recorder_getTextureValuePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Int, ffi.Int)>>(
          'flutter_recorder_getTextureValue');
  late final _flutter_recorder_getTextureValue =
      _flutter_recorder_getTextureValuePtr
          .asFunction<double Function(int, int)>();

  void flutter_recorder_setFftSmoothing(
    double smooth,
  ) {
    return _flutter_recorder_setFftSmoothing(
      smooth,
    );
  }

  late final _flutter_recorder_setFftSmoothingPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
          'flutter_recorder_setFftSmoothing');
  late final _flutter_recorder_setFftSmoothing =
      _flutter_recorder_setFftSmoothingPtr.asFunction<void Function(double)>();

  /// Getters for actual device parameters (populated after init)
  int flutter_recorder_getSampleRate() {
    return _flutter_recorder_getSampleRate();
  }

  late final _flutter_recorder_getSampleRatePtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedInt Function()>>(
          'flutter_recorder_getSampleRate');
  late final _flutter_recorder_getSampleRate =
      _flutter_recorder_getSampleRatePtr.asFunction<int Function()>();

  int flutter_recorder_getCaptureChannels() {
    return _flutter_recorder_getCaptureChannels();
  }

  late final _flutter_recorder_getCaptureChannelsPtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedInt Function()>>(
          'flutter_recorder_getCaptureChannels');
  late final _flutter_recorder_getCaptureChannels =
      _flutter_recorder_getCaptureChannelsPtr.asFunction<int Function()>();

  int flutter_recorder_getPlaybackChannels() {
    return _flutter_recorder_getPlaybackChannels();
  }

  late final _flutter_recorder_getPlaybackChannelsPtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedInt Function()>>(
          'flutter_recorder_getPlaybackChannels');
  late final _flutter_recorder_getPlaybackChannels =
      _flutter_recorder_getPlaybackChannelsPtr.asFunction<int Function()>();

  int flutter_recorder_getCaptureFormat() {
    return _flutter_recorder_getCaptureFormat();
  }

  late final _flutter_recorder_getCaptureFormatPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'flutter_recorder_getCaptureFormat');
  late final _flutter_recorder_getCaptureFormat =
      _flutter_recorder_getCaptureFormatPtr.asFunction<int Function()>();

  int flutter_recorder_getPlaybackFormat() {
    return _flutter_recorder_getPlaybackFormat();
  }

  late final _flutter_recorder_getPlaybackFormatPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'flutter_recorder_getPlaybackFormat');
  late final _flutter_recorder_getPlaybackFormat =
      _flutter_recorder_getPlaybackFormatPtr.asFunction<int Function()>();

  /// //////////////////////
  /// MONITORING
  /// //////////////////////
  void flutter_recorder_setMonitoring(
    bool enabled,
  ) {
    return _flutter_recorder_setMonitoring(
      enabled,
    );
  }

  late final _flutter_recorder_setMonitoringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
          'flutter_recorder_setMonitoring');
  late final _flutter_recorder_setMonitoring =
      _flutter_recorder_setMonitoringPtr.asFunction<void Function(bool)>();

  void flutter_recorder_setMonitoringMode(
    int mode,
  ) {
    return _flutter_recorder_setMonitoringMode(
      mode,
    );
  }

  late final _flutter_recorder_setMonitoringModePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
          'flutter_recorder_setMonitoringMode');
  late final _flutter_recorder_setMonitoringMode =
      _flutter_recorder_setMonitoringModePtr.asFunction<void Function(int)>();

  /// //////////////////////
  /// SLAVE MODE
  /// //////////////////////
  /// Check if slave audio is ready (first callback has run successfully)
  /// Used to wait for the audio pipeline to stabilize before calibration
  int flutter_recorder_isSlaveAudioReady() {
    return _flutter_recorder_isSlaveAudioReady();
  }

  late final _flutter_recorder_isSlaveAudioReadyPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'flutter_recorder_isSlaveAudioReady');
  late final _flutter_recorder_isSlaveAudioReady =
      _flutter_recorder_isSlaveAudioReadyPtr.asFunction<int Function()>();

  /// Set native audio sink for direct recorder-to-player streaming
  void flutter_recorder_setNativeAudioSink(
    NativeAudioSinkCallback callback,
    ffi.Pointer<ffi.Void> userData,
  ) {
    return _flutter_recorder_setNativeAudioSink(
      callback,
      userData,
    );
  }

  late final _flutter_recorder_setNativeAudioSinkPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(NativeAudioSinkCallback,
              ffi.Pointer<ffi.Void>)>>('flutter_recorder_setNativeAudioSink');
  late final _flutter_recorder_setNativeAudioSink =
      _flutter_recorder_setNativeAudioSinkPtr.asFunction<
          void Function(NativeAudioSinkCallback, ffi.Pointer<ffi.Void>)>();

  /// Check if native audio sink is active
  bool flutter_recorder_isNativeAudioSinkActive() {
    return _flutter_recorder_isNativeAudioSinkActive();
  }

  late final _flutter_recorder_isNativeAudioSinkActivePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
          'flutter_recorder_isNativeAudioSinkActive');
  late final _flutter_recorder_isNativeAudioSinkActive =
      _flutter_recorder_isNativeAudioSinkActivePtr
          .asFunction<bool Function()>();

  /// Disable native audio sink
  void flutter_recorder_disableNativeAudioSink() {
    return _flutter_recorder_disableNativeAudioSink();
  }

  late final _flutter_recorder_disableNativeAudioSinkPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_disableNativeAudioSink');
  late final _flutter_recorder_disableNativeAudioSink =
      _flutter_recorder_disableNativeAudioSinkPtr.asFunction<void Function()>();

  void flutter_recorder_injectPreroll(int frameCount) {
    return _flutter_recorder_injectPreroll(frameCount);
  }

  late final _flutter_recorder_injectPrerollPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Size)>>(
          'flutter_recorder_injectPreroll');
  late final _flutter_recorder_injectPreroll =
      _flutter_recorder_injectPrerollPtr.asFunction<void Function(int)>();

  /// //////////////////////
  /// FILTERS
  /// //////////////////////
  int flutter_recorder_isFilterActive(
    RecorderFilterType filterType,
  ) {
    return _flutter_recorder_isFilterActive(
      filterType.value,
    );
  }

  late final _flutter_recorder_isFilterActivePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.UnsignedInt)>>(
          'flutter_recorder_isFilterActive');
  late final _flutter_recorder_isFilterActive =
      _flutter_recorder_isFilterActivePtr.asFunction<int Function(int)>();

  CaptureErrors flutter_recorder_addFilter(
    RecorderFilterType filterType,
  ) {
    return CaptureErrors.fromValue(_flutter_recorder_addFilter(
      filterType.value,
    ));
  }

  late final _flutter_recorder_addFilterPtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedInt Function(ffi.UnsignedInt)>>(
          'flutter_recorder_addFilter');
  late final _flutter_recorder_addFilter =
      _flutter_recorder_addFilterPtr.asFunction<int Function(int)>();

  CaptureErrors flutter_recorder_removeFilter(
    RecorderFilterType filterType,
  ) {
    return CaptureErrors.fromValue(_flutter_recorder_removeFilter(
      filterType.value,
    ));
  }

  late final _flutter_recorder_removeFilterPtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedInt Function(ffi.UnsignedInt)>>(
          'flutter_recorder_removeFilter');
  late final _flutter_recorder_removeFilter =
      _flutter_recorder_removeFilterPtr.asFunction<int Function(int)>();
